Use the "classic" expand/collapse arrows on ticket query screen, and some other minor UI improvements in that area.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5605 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -75,6 +75,7 @@ div.message {
 #dirlist td.name a.parent { background-image: url(../parent.png) }
 #dirlist tr span.expander { 
   background-image: url(../expander_normal.png); 
+  cursor: pointer; 
   padding-left: 12px; 
   margin-left: 4px; 
 }
