When the ticket owner field is not set, it should not be presented as ''anonymous''. Fixes #5434
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5628 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -50,7 +50,8 @@
                 <td py:otherwise="" class="$name" py:choose="">
                   <a py:when="name == 'summary'" href="$result.href" title="View ticket">$value</a>
                   <span py:when="isinstance(value, datetime)">${format_datetime(value)}</span>
-                  <span py:when="name in ('owner', 'reporter')">${authorinfo(value)}</span>
+                  <span py:when="name == 'reporter'">${authorinfo(value)}</span>
+                  <span py:when="name == 'owner' and value">${authorinfo(value)}</span>
                   <span py:otherwise="">$value</span>
                 </td>
               </py:with>
