Ticket clone was copying description in summary. Thanks to jkankiewicz for the report and the fix (#5493)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5675 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -189,7 +189,7 @@
                   <input type="submit" name="clone" value="Clone" title="Create a copy of this ticket"  />
                   <py:for each="f in fields">
                     <py:choose test="f.name">
-                      <input py:when="'summary'" type="hidden" name="field_summary" value="$ticket.description (cloned)" />
+                      <input py:when="'summary'" type="hidden" name="field_summary" value="$ticket.summary (cloned)" />
                       <input py:when="'description'" type="hidden" name="field_description" value="Cloned from #$ticket.id: ${'\n----\n' + ticket.description}" />
                       <input py:otherwise="" type="hidden" name="field_${f.name}" value="${ticket[f.name]}" />
                     </py:choose>
