WebAdmin: fix upload plugin. Thanks to Dave Abrahams for the patch!
Closes #3168.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5752 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_plugins.html
+++ b/trac/admin/templates/admin_plugins.html
@@ -21,7 +21,7 @@
         <legend>Install Plugin:</legend>
         <div class="field">
           <label>
-            File: <input type="file" name="egg_file" disabled="${readonly or None}" />
+            File: <input type="file" name="plugin_file" disabled="${readonly or None}" />
           </label>
         </div>
         <p class="help" py:choose="readonly">
