--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -6,7 +6,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
   <head>
-    <title>About</title>
+    <title>About Trac</title>
     <link rel="stylesheet" type="text/css" href="${chrome.htdocs_location}css/about.css" />
     <script type="text/javascript">
       $(document).ready(function () {
@@ -42,7 +42,7 @@
       </a>
       <p>Please visit the Trac open source project:
         <a href="http://trac.edgewall.org/">http://trac.edgewall.org/</a></p>
-      <p class="copyright">Copyright &copy; 2003-2007
+      <p class="copyright" xml:lang="en">Copyright &copy; 2003-2007
         <a href="http://www.edgewall.org/">Edgewall Software</a>
       </p>
 
