--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -188,18 +188,18 @@
 
       <script type="text/javascript">
         var properties={
-        <py:for each="sep, (field_name, field) in separated(fields.iteritems())">
+        <py:for each="(field_name, field), sep in separated(fields.iteritems())">
           $field_name: { type: "$field.type", label: "$field.label"
           <py:if test="'options' in field">, options: [
-            <py:for each="sep, option in separated(field.options)">"$option"$sep
+            <py:for each="option, sep in separated(field.options)">"$option"$sep
             </py:for>]
           </py:if>}$sep
         </py:for>
         };
         var modes = {
-        <py:for each="sep, (type_name, type_modes) in separated(modes.iteritems())">
+        <py:for each="(type_name, type_modes), sep in separated(modes.iteritems())">
           $type_name: [
-          <py:for each="sep, mode in separated(type_modes)">
+          <py:for each="mode, sep in separated(type_modes)">
             {text: "$mode.name", value: "$mode.value" }$sep
           </py:for>
             ]$sep
