Improved rendering of ticket property changes (merged from the FieldRefactoring branch).
The rendering of property change is now done in `rendered_changelog_entries` in the controller rather than in the template. That method can therefore be called by `_insert_ticket_data` (for the normal ticket display) and by `_get_history` (displaying ticket version changes). In the future, that method will delegate the rendering to dedicated field renderer classes and/or property renderer components.

The `rendered_changelog_entries` method implements a few additional rendering enhancements:
 - improved visualization of changes to the Ticket CC list (added/removed and obfuscation of e-mail addresses if needed) (fixes #5126)
 - similar added/removed rendering for changes to the keyword list
 - set/unset for checkbox custom fields


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5812 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -64,22 +64,12 @@
             <py:when test="field_name == 'attachment'">
               <a href="${href.attachment('ticket', ticket.id, field.new)}"><em>${field.new}</em></a> added
             </py:when>
+            <py:when test="'rendered' in field">${field.rendered}</py:when>
             <py:when test="field.old and field.new">
-              changed
-              <py:choose>
-                <py:when test="field_type == 'textarea'">
-                  (<a py:strip="'cnum' not in change" href="${href.ticket(ticket.id, action='diff', version=change.cnum)}">diff</a>)
-                </py:when>
-                <py:otherwise>
-                  from <em>${field.old}</em> to <em>${field.new}</em>
-                </py:otherwise>
-              </py:choose>
+              changed from <em>${field.old}</em> to <em>${field.new}</em>
             </py:when>
             <py:when test="not field.old and field.new">
-              set
-              <py:if test="field_type != 'textarea'">
-                to <em>${field.new}</em>
-              </py:if>
+              set to <em>${field.new}</em>
             </py:when>
             <py:otherwise>deleted</py:otherwise>
           </py:choose>
