--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -57,8 +57,7 @@
 
     <py:def function="display_change(change)">
       <ul py:if="change.fields" class="changes">
-        <li py:for="field_name, field in change.fields.items()"
-            py:with="field_type = field_types.get(field_name)">
+        <li py:for="field_name, field in change.fields.items()">
           <strong>${field_name}</strong>
           <py:choose>
             <py:when test="field_name == 'attachment'">
@@ -160,7 +159,12 @@
                     headers="${field and 'h_'+field.name or None}"
                     class="${field and field.name in ('cc', 'keywords') and 'searchable' or None}"
                     colspan="${fullrow and 3 or None}">
-                  <py:if test="field">${ticket[field.name]}</py:if>
+                  <py:if test="field">
+                    <py:choose test="">
+                      <py:when test="'rendered' in field">${field.rendered}</py:when>
+                      <py:otherwise>${ticket[field.name]}</py:otherwise>
+                    </py:choose>
+                  </py:if>
                 </td>
               </py:for>
             </tr>
