Respect new lines from the original text in ticket descriptions and comments. Implements #2914.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5819 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -75,7 +75,7 @@
         </li>
       </ul>
       <div py:if="'comment' in change" class="comment searchable" xml:space="preserve">
-        ${wiki_to_html(context, change.comment)}
+        ${wiki_to_html(context, change.comment, escape_newlines=True)}
       </div>
     </py:def>
 
@@ -202,7 +202,7 @@
                 </div>
               </form>
               <div py:if="ticket.description" class="searchable" xml:space="preserve">
-                ${wiki_to_html(context, ticket.description)}
+                ${wiki_to_html(context, ticket.description, escape_newlines=True)}
               </div>
             </div>
         </div>
