Mark more strings as localizable.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5837 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -18,7 +18,7 @@
       <h2>Attachment Navigation</h2>
       <ul>
         <li class="first">
-          <a href="${chrome.links.up[0].href}">Back to $parent_name</a>
+          <a href="${chrome.links.up[0].href}">${_("Back to %(parent)s", parent=parent_name)}</a>
         </li>
       </ul>
     </div>
@@ -107,7 +107,7 @@
             <form method="get" action="">
               <div id="delete">
                 <input type="hidden" name="action" value="delete" />
-                <input type="submit" value="Delete attachment" />
+                <input type="submit" value="${_('Delete attachment')}" />
               </div>
             </form>
           </div>
