Make browser requests include range_{min,max}_secs in the expanding folders
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5879 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -23,8 +23,8 @@
           if ( !webkit_rev || (521 - webkit_rev[1]).toString()[0] == "-" )
             enableExpandDir(null, $("#dirlist tr"), {
                 action: 'inplace',
-                ranges_min_secs: '$dir.range_min_secs',
-                ranges_max_secs: '$dir.range_max_secs'
+                range_min_secs: '$dir.range_min_secs',
+                range_max_secs: '$dir.range_max_secs'
             });
         </py:if>
         <py:if test="file and file.annotate">
