Fix typo in ticket template. Closes #5875.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5922 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -204,7 +204,7 @@
               <div py:if="ticket.description" class="searchable" xml:space="preserve">
                 ${wiki_to_html(context, ticket.description, escape_newlines=True)}
               </div>
-              <br py:if="not ticket.description" stlye="clear: both;" />
+              <br py:if="not ticket.description" style="clear: both" />
             </div>
         </div>
       </fieldset>
