Make the nav item to the current admin page an actual link, to accomodate the need to "jump back up" on "deeper" admin pages.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5933 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin.html
+++ b/trac/admin/templates/admin.html
@@ -25,8 +25,7 @@
               <li py:for="panel in panels" py:with="panel = panel.panel;
                       pan_is_active = cat_is_active and panel.id == active_panel"
                   class="${pan_is_active and 'active' or None}">
-                <a py:strip="pan_is_active"
-                   href="${href.admin(category.id, panel.id)}">${panel.label}</a>
+                <a href="${href.admin(category.id, panel.id)}">${panel.label}</a>
               </li>
             </ul>
           </li>
