Use the new match template optimization hints introduced in Genshi trunk, which are simply ignored in older Genshi versions.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5960 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin.html
+++ b/trac/admin/templates/admin.html
@@ -6,12 +6,12 @@
       xmlns:py="http://genshi.edgewall.org/"
       py:strip="">
 
-  <head py:match="head">
+  <py:match path="head" once="true"><head>
     <title>Administration: ${select('title/text()')}</title>
     ${select("*[local-name() != 'title']")}
-  </head>
+  </head></py:match>
 
-  <body py:match="body">
+  <py:match path="body" once="true"><body>
     <div id="ctxtnav" class="nav"></div>
 
     <div id="content" class="admin">
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-  </body>
+  </body></py:match>
 
   <xi:include href="layout.html" />
 </html>
