Fix for disabling access keys in the preferences. Closes #5765.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6000 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/prefs/templates/prefs_keybindings.html
+++ b/trac/prefs/templates/prefs_keybindings.html
@@ -11,6 +11,7 @@
   <body>
 
     <div class="field">
+      <input type="hidden" name="accesskeys_cb" value="" />
       <label>
         <input type="checkbox" name="accesskeys" value="1"
                checked="${settings.session.get('accesskeys') or None}" />
