Fix typo in Genshi template. Closes #6269.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6115 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/history_view.html
+++ b/trac/templates/history_view.html
@@ -37,7 +37,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr py:for="idx, item in enumerate(history)" class="idx % 2 and 'odd' or 'even'">
+            <tr py:for="idx, item in enumerate(history)" class="${idx % 2 and 'odd' or 'even'}">
               <td class="diff">
                 <input type="radio" name="old_version" value="$item.version"
                        checked="${idx == 1 or None}" />
