Follow-up to r6120: the fix was not complete, as we need to activate the "preview" mode when creating a new error ticket with the semi-automatic error reporting. Related to #5025.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6122 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -44,7 +44,7 @@
   </head>
 
   <py:def function="create_ticket(teo=False)">
-    <input type="hidden" name="preview" value="1" />
+    <input type="hidden" name="__preview" value="1" />
     <input type="hidden" name="reporter" value="${get_reporter_id(req)}" />
     <input py:if="teo" type="hidden" name="version"
            value="${'dev' in trac.version and 'devel' or trac.version}" />
