Make the error.html template more useful when Javascript is not enabled.
The default view is the plain text view, and only when Javascript is available does the interactive view and the toggle button get shown.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6136 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -463,7 +463,7 @@ table.listing tbody tr:hover { background: #eed !important }
  padding: .5em;
  margin: 1em 0;
 }
-#content.error pre, div.system-message pre {
+#content.error div.message pre, div.system-message pre {
   margin-left: 1em;
   overflow: hidden;
   white-space: normal;
